- Fix buttons funny  behavior when responsive on smaller screen size - The dashboard/report expands beyond the background container and footer when using the zoom button. - putting the work "Sample" inside parentheses "(Sample)" and put it on a separate line.   * Google Translate is doing funny things with that word when translating the buttons to Spanish.  Maybe this change will make it translate as desired - add about 10-15px margin to the left of the Charter Foresight logo in header bar.  So it is not right up against the left edge. - change "User Settings" to "Login/Logout"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -321,6 +321,7 @@ body > div {
 
 .layout-wrapper .topbar .topbar-left .topbar-logo {
     height: 50px;
+    margin-left:15px;
 }
 
 .layout-wrapper .topbar .topbar-left {
@@ -462,7 +463,7 @@ body > div {
     }
 }
 
-@media screen and (min-device-width: 1025px) and (max-device-width : 1351px) {
+@media screen and (min-width: 1025px) and (max-width : 1351px) {
     .dashboard-card .card-image {
         padding-top: 10%;
     }
@@ -473,29 +474,18 @@ body > div {
     }
 }
 
-@media screen and (min-device-width: 825px) and (max-device-width : 900px) {
+@media screen and (min-width: 825px) and (max-width : 1025px) {
     .dashboard-card .card-image {
         padding-top: 10%;
     }
 
     body, .dashboard-card .icon-wrapper {
-        height: 65px;
+        height: 60px;
         font-size: 11px !important;
     }
 }
 
-@media screen and (min-device-width: 769px) and (max-device-width : 825px) {
-    .dashboard-card .card-image {
-        padding-top: 10%;
-    }
-
-    body, .dashboard-card .icon-wrapper {
-        height: 50px;
-        font-size: 11px !important;
-    }
-}
-
-@media screen and (min-device-width: 642px) and (max-device-width : 697px) {
+@media screen and (min-width: 600px) and (max-width : 825px) {
     .dashboard-card .card-image {
         padding-top: 10%;
     }
